# accounts/src/main/java/com/jorge/accounts/model/FixedTermAccount.java
@@ -16,8 +16,8 @@ import java.time.LocalDateTime;
 public class FixedTermAccount extends Account{
     private LocalDate allowedWithdrawal;
 
-    public FixedTermAccount(String id, String accountNumber, BigDecimal balance, String customerDni, AccountType accountType, LocalDateTime createdAt, Integer movementsThisMonth, Integer maxMovementsFeeFreeThisMonth, Boolean isCommissionFeeActive, BigDecimal movementCommissionFee, LocalDate allowedWithdrawal) {
-        super(id, accountNumber, balance, customerDni, accountType, createdAt, movementsThisMonth, maxMovementsFeeFreeThisMonth, isCommissionFeeActive, movementCommissionFee);
+    public FixedTermAccount(String id, String accountNumber, BigDecimal balance, String customerId, AccountType accountType, LocalDateTime createdAt, Integer movementsThisMonth, Integer maxMovementsFeeFreeThisMonth, Boolean isCommissionFeeActive, BigDecimal movementCommissionFee, LocalDate allowedWithdrawal) {
+        super(id, accountNumber, balance, customerId, accountType, createdAt, movementsThisMonth, maxMovementsFeeFreeThisMonth, isCommissionFeeActive, movementCommissionFee);
         this.allowedWithdrawal = allowedWithdrawal;
     }
 }
