# accounts/src/main/java/com/jorge/accounts/model/SavingsAccount.java
@@ -13,8 +13,8 @@ import java.time.LocalDateTime;
 public class SavingsAccount extends Account {
     private Integer monthlyMovementsLimit;
 
-    public SavingsAccount(String id, String accountNumber, BigDecimal balance, String customerDni, AccountType accountType, LocalDateTime createdAt, Integer movementsThisMonth, Integer maxMovementsFeeFreeThisMonth, Boolean isCommissionFeeActive, BigDecimal movementCommissionFee, Integer monthlyMovementsLimit) {
-        super(id, accountNumber, balance, customerDni, accountType, createdAt, movementsThisMonth, maxMovementsFeeFreeThisMonth, isCommissionFeeActive, movementCommissionFee);
+    public SavingsAccount(String id, String accountNumber, BigDecimal balance, String customerId, AccountType accountType, LocalDateTime createdAt, Integer movementsThisMonth, Integer maxMovementsFeeFreeThisMonth, Boolean isCommissionFeeActive, BigDecimal movementCommissionFee, Integer monthlyMovementsLimit) {
+        super(id, accountNumber, balance, customerId, accountType, createdAt, movementsThisMonth, maxMovementsFeeFreeThisMonth, isCommissionFeeActive, movementCommissionFee);
         this.monthlyMovementsLimit = monthlyMovementsLimit;
     }
 }
